--- a/src/styles/Record.css
+++ b/src/styles/Record.css
@@ -64,6 +64,27 @@
     font-size: 14px;
     text-align: center;
 }
+
+.signature-placeholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10vw; /* Adjust width as needed */
+    height: 8vh; /* Adjust height as needed */
+    margin-left: 20px; /* Space between input fields and picture placeholder */
+}
+
+.signature-rect {
+    width: 100%;
+    height: 100%;
+    border: 2px dashed #ccc; /* Dashed border for the placeholder */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #aaa;
+    font-size: 14px;
+    text-align: center;
+}
   
 .sectiontwodenex p {
     font-size: 18px;
@@ -121,7 +142,7 @@
 }
 
 .insideInputFieldType label{
-    margin: 0 30px 0 30px;
+    margin: 0 20px 0 20px;
 }
   
 .report-form td input{
@@ -341,3 +362,48 @@ button {
     border: solid #fff;
     border-width: 0 2px 2px 0;
 }
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+  }
+  
+  .popup-buttons {
+    display: flex;
+    justify-content: center;
+    margin-right: 10px;
+  }
+  
+  .popup-buttons button {
+    padding: 10px 20px;
+    border: none;
+    background: #2aafce;
+    color: white;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 100px;
+    margin-top: 5px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 40px;
+  }
+  
+  .popup-buttons button:hover {
+    background: #0056b3;
+  }
+  
