--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+*{
+    font-family: 'Montserrat', sans-serif;
+}
+
 body, html {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -48,7 +52,7 @@ body {
     margin-top: -15px;
 }
 
-.forms-container {
+.login-container {
     width: 20vw;
     flex: 0.5;
     display: flex;
